--- a/src/views/shop.handlebars
+++ b/src/views/shop.handlebars
@@ -16,6 +16,7 @@
             <article class="card product-item">
               <header class="card__header">
                 <h1 class="product__title">{{this.name}}</h1>
+                <h2>{{this.id}}</h2>
               </header>
               <div class="card__image">
                 <img src={{this.url}} alt="A Book" />
@@ -24,7 +25,10 @@
                 <h2 class="product__price">{{this.kocka}}</h2>
               </div>
               <div class="card__actions">
-                <button class="btn">Add to Cart</button>
+                <button class="btn">Edit</button>
+                <form action="/shop/product-delete/{{this.id}}" method="post">
+                  <button class="btn">Delete</button>
+                </form>
               </div>
             </article>
           {{/each}}
